gcc/testsuite/g++.dg/init/brace1.C
// { dg-do compile }

int i[4] = { { 3 } }; // { dg-error "brace" }

